# llmess

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/llmess/: __init__.py  __main__.py  cli.py  pager.py
tests/: test_llmess.py
