[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmess"
version = "0.1.0"
description = "A less pager that uses LLMs to hallucinate infinite file continuations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "tgies" }
]
keywords = ["llm", "pager", "less", "cli", "humor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Games/Entertainment",
]
dependencies = [
    # Note: llm is NOT listed here intentionally.
    # llmess calls llm via subprocess and expects users to have it
    # installed at user level (pipx, etc.) with their plugins configured.
    # Bundling llm would shadow the user's configured installation.
]

[project.scripts]
llmess = "llmess.cli:main"

[project.urls]
Homepage = "https://github.com/tgies/llmess"
Repository = "https://github.com/tgies/llmess"
